[gd_scene load_steps=5 format=3 uid="uid://5lhdpntnpicg"]

[ext_resource type="Script" uid="uid://ct31x464emrif" path="res://scripts/main.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://cplx8wo7g2ig6" path="res://scripts/main_text_port.gd" id="2_cm0pq"]
[ext_resource type="PackedScene" uid="uid://bosmwt06o5o0" path="res://scenes/Room.tscn" id="2_uu6xs"]
[ext_resource type="Script" uid="uid://b7kqy0ug2a7ut" path="res://scripts/room_manager.gd" id="3_cm0pq"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_glv2v")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0.219608, 0, 1)
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0.611765, 0, 1)

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0.364706, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="tabbed" type="TabContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 2

[node name="Character Info" type="RichTextLabel" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Settings" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 1

[node name="Settings" type="GridContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed/Settings"]
layout_mode = 2
columns = 2

[node name="Panel" type="Label" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed/Settings/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed/Settings/Settings"]
layout_mode = 2

[node name="Stats" type="Control" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed"]
layout_mode = 2
metadata/_tab_index = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed/Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(0, 0.364706, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="MainTextPort" type="RichTextLabel" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.15
text = "test"
script = ExtResource("2_cm0pq")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
color = Color(0, 0.364706, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="Button" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="North" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "North"

[node name="Button3" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="West" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "West"

[node name="South" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "South"

[node name="East" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "East"

[node name="Button9" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button10" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button11" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button12" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button13" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button14" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button15" type="Button" parent="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("3_cm0pq")

[node name="House" parent="RoomManager" instance=ExtResource("2_uu6xs")]
offset_left = -367.0
offset_top = -439.0
offset_right = -167.0
offset_bottom = -239.0
room_description = "a house"

[node name="Outside" parent="RoomManager" instance=ExtResource("2_uu6xs")]
offset_left = -154.0
offset_top = -439.0
offset_right = 46.0
offset_bottom = -239.0
room_name = "outside"
room_description = "a forest."

[connection signal="toggled" from="MarginContainer/BoxContainer/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer/tabbed/Settings/Settings/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer/North" to="." method="_on_north_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer/West" to="." method="_on_west_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer/South" to="." method="_on_south_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/VBoxContainer/MarginContainer/GridContainer/East" to="." method="_on_east_pressed"]
